# claude-agents

./: .gitignore  CLAUDE.md  PRESENTATION.md  presentation.html
k8s-monitor/: .dockerignore  .env.example  CYCLE_MEMORY.md  Dockerfile  README.md  SONNET_BUG_FIX_SUMMARY.md  deploy-to-ecr.sh  docker-compose.yml  kube_config  pyproject.toml  requirements.txt  run_debug.sh  run_once.sh  start.sh  test_context_accumulation.py  test_context_pruning.py  test_conversation_formatter.py  test_cycle_memory.py  test_extract_section.py  test_hardcoded_models.py  test_kubectl_fix.py  test_long_context_cycles.py  test_numbering_regex.py  test_parse_findings.py  test_parser.py  test_parser_debug.py  test_parser_fix.py  test_parser_summary.py  test_performance_comparison.py  test_persistent_monitor.py  test_real_world_scenarios.py  test_session_manager.py  test_stateless_monitor.py  test_trend_detection.py  test_with_api_token.py
k8s-monitor/.claude/: CLAUDE.md
k8s-monitor/docs/: AGENT-CUSTOMIZATION-GUIDE.md  HOT-RELOAD-ARCHITECTURE.md  IMPLEMENTATION-PLAN.md  LONG_CONTEXT_IMPLEMENTATION_PLAN.md  PHASE-1-SUMMARY.md  PHASE3-SUMMARY.md  PHASE4-SUMMARY.md  PHASE_1_COMPLETION.md  PRODUCTION-DEPLOYMENT-GUIDE.md  rag-implementation-plan-python.md  rag-implementation-plan.md
k8s-monitor/k8s/: DEPLOYMENT-CHEATSHEET.md  agents-configmap.yaml  configmap.yaml  deployment.yaml  namespace.yaml  networkpolicy.yaml  orchestrator-configmap.yaml  secret.yaml  serviceaccount.yaml  servicemonitor.yaml
k8s-monitor/src/: __init__.py  main.py
k8s-monitor/tests/: __init__.py  conftest.py  (+6 more)
(+220 files in other folders)
