[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-monitor"
version = "0.1.0"
description = "K3s homelab cluster monitoring agent using Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Monitoring Team"}
]

dependencies = [
    "claude-agent-sdk>=0.1.1",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.6.0",
    "pydantic>=2.12.0",
    "schedule>=1.2.2",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]

[project.scripts]
k8s-monitor = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
